--- a/uottahack.html
+++ b/uottahack.html
@@ -75,8 +75,8 @@
         <p class="mt-3">I went through many renditions of possible logos, however, none of the following felt <b>right</b>.
           Whenever I felt stuck on a certain design, I'd return to my notebook and continue sketching possible logos.</p>
 
-          <img src="img/rejects.png" class="img-fluid mx-auto d-block rounded mt-2">
-          <p class="text-center caption mt-1"><em>Proposed logos that were scrapped.</em></p>
+        <img src="img/rejects.png" class="img-fluid mx-auto d-block rounded mt-2">
+        <p class="text-center caption mt-1"><em>Proposed logos that were scrapped.</em></p>
 
          <!-- Final Design -->
          <h2 class="mt-3">Final Design</h2>
@@ -100,8 +100,8 @@
          <!-- <img src="img/palette.png" class="img-fluid mx-auto d-block rounded mt-2">
          <p class="text-center caption mt-1"><em>The final logo.</em></p> -->
 
-         <p class="mt-2">Purple was the base color for most designs. It was a dark color that allowed flexibility when choosing a secondary color to include.
-         The addition of orange and peach to the color palette provided the much needed contrast. Lastly, the blue provided the needed transition
+         <p class="mt-2">Purple was the base color for most designs. It was a dark color that allowed <b>flexibility</b> when choosing a secondary color to include.
+         The addition of orange and peach to the color palette provided the much needed <b>contrast</b>. Lastly, the blue provided the needed <b>transition</b>
          between the purple and orange.</p>
 
         <!-- Website Design -->
