--- a/uottahack.html
+++ b/uottahack.html
@@ -52,6 +52,7 @@
             This year, uOttaHack 3 welcomed over 400 students from February 7th-9th to collaborate on projects, learn at workshops, and develop their innovative ideas.
             The uOttaHack committee decided to <b>launch a rebrand</b> that will represent this special uOttaHack and continue to represent the face of uOttaHack for years to come.</p>
 
+
           <!-- Previous Design -->
           <h2 class="mt-3">Previous Design</h2>
           <p class="mt-1">In previous years, uOttaHack was <b>struggling to have a consistent design</b>.
@@ -61,13 +62,32 @@
           <img src="img/oldHackathon.png" class="img-fluid rounded zoom">
           <p class="text-center caption"><em>Comparison of the 2018 homepage (left) and 2019 homepage (right) for uOttaHack.</em></p>
 
+
           <!-- Design Process -->
           <h2 class="mt-3">Design Process</h2>
-          <p class="mt-1">We wanted to adopt a <b>minimalistic</b> look for uOttaHack while simultaneously integrating with the University.
+
+          <div class="row justify-content-center mt-2">
+
+            <div class="col-lg-4 my-auto">
+              <p>
+                We wanted to adopt a <b>minimalistic</b> look for uOttaHack while simultaneously 
+                integrating with the University. I started by analysing the current <b>symbols of the university</b>,
+                followed by researching logos that revolve around the letter U.
+              </p>
+            </div>
+
+            <div class="col-lg-8">
+              <img src="img/schoolmotif.png" class="img-fluid mx-auto d-block rounded shadow zoom" style="max-height: 22rem;">
+              <p class="text-center caption mt-1"><em>Proposed logos that were scrapped.</em></p>
+            </div>
+
+          </div>
+
+          <!-- <p class="mt-1">We wanted to adopt a <b>minimalistic</b> look for uOttaHack while simultaneously integrating with the University.
             I started by analysing the current <b>symbols of the university</b>, followed by researching logos that revolve around the letter U.</p>
 
           <img src="img/schoolmotif.png" class="img-fluid mx-auto d-block rounded shadow zoom" style="max-height: 24rem;">
-          <p class="text-center caption"><em>The three main symbols related to the City of Ottawa and uOttawa.</em></p>
+          <p class="text-center caption"><em>The three main symbols related to the City of Ottawa and uOttawa.</em></p> -->
 
           <img src="img/logoinspo.png" class="img-fluid mx-auto d-block rounded mt-5 shadow zoom" style="max-height: 30rem;">
           <p class="text-center caption mt-1"><em>My favorite logos that helped guide my design.</em></p>
