--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </p>
             </div>
 
-            <div class="col-lg-6 animated fadeIn text-center my-auto" id="picDiv">
+            <div class="col-lg-6 playsinline animated fadeIn text-center my-auto" id="picDiv">
               <video width="400" class="rounded" autoplay muted loop id="pic">
                 <source src="./img/try2comp.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
