--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
-    document.getElementById('vid').play();
+    document.getElementById('pic').play();
 </script>
 
 </body>
