--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="col-lg-6 playsinline animated fadeIn text-center my-auto" id="picDiv">
               <video width="400" class="rounded" autoplay muted loop id="pic">
-                <source src="./img/try2comp.mp4" type="video/mp4">
+                <source src="./img/try2comp.mp4" type="video/mp4" id="videosrc">
                 Your browser does not support HTML5 video.
               </video>
             </div>
@@ -138,7 +138,7 @@
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
-    document.getElementById('pic').play();
+    document.getElementById('videosrc').play();
 </script>
 
 </body>
