--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
     document.getElementById('videosrc').play();
+    document.getElementById('pic').play();
 </script>
 
 </body>
