--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Imported fonts-->
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,19 +58,25 @@
   <!-- Page Content -->
   <div class="container-fluid">
     <div class="row">
-      
+
       <div class="col-md-2 animated fadeIn" id="mynav">
         <div>
           <ul class="list-unstyled text-left">
-            <a href=""><li>Work</li></a>
-            <a href=""><li>About Me</li></a>
-            <a href=""><li>Contact</li></a>
+            <a href="">
+              <li>Work</li>
+            </a>
+            <a href="">
+              <li>About Me</li>
+            </a>
+            <a href="">
+              <li>Contact</li>
+            </a>
           </ul>
-       </div>
+        </div>
       </div>
 
       <div class="col-md-9" id="allcontent">
-        
+
         <div class="container">
           <div class="row">
 
@@ -84,6 +90,46 @@
                 Sed diam est, volutpat vitae venenatis nec, sodales ac enim. Nulla luctus ex nec egestas molestie.
                 Etiam sed arcu ipsum.
               </p>
+              <!-- <img src="https://s.cdpn.io/3/kiwi.svg" alt=""> -->
+              <ul>
+                <li>
+                  <a href="">
+                    <div class="svg-wrapper rounded">
+                      <svg version="1.1" id="github" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
+                        style="enable-background:new 0 0 200 200;" xml:space="preserve">
+                        <g>
+                          <path d="M115,136.8c3.8-0.8,7.4-1.4,10.8-2.3c15.2-4.2,23.8-14.7,25-30.5c0.4-4.7,0.5-9.4-0.6-14.1c-1.1-4.6-3.2-8.6-6.2-12.2
+		c-0.8-0.9-1-1.6-0.6-2.8c1.9-6.2,1.3-12.3-1-18.3c-0.2-0.6-1.3-1.2-2-1.2c-3.8-0.1-7.3,1.2-10.7,2.8c-2.9,1.4-5.6,3.1-8.4,4.6
+		c-0.7,0.4-1.7,0.6-2.4,0.4c-12.4-3-24.8-3-37.3,0c-0.8,0.2-1.9,0-2.6-0.5c-5.2-3.2-10.5-6.2-16.7-7.2c-3.7-0.6-4.1-0.4-5.1,3.1
+		c-1.6,5.6-1.8,11.2-0.1,16.8c0.2,0.6-0.1,1.5-0.4,2c-5.9,7-7.9,15.2-7.2,24.2c0.4,5.5,1.3,10.9,3.6,15.9
+		c4.4,9.6,12.3,14.7,22.1,17.3c2.7,0.7,5.6,1.1,8.3,1.6c0.5,0.1,1.1,0.2,1.8,0.4c-2.7,2.9-4,6.1-4.7,9.7c-0.1,0.5-0.7,1-1.2,1.2
+		c-8.9,3.7-16.8,1.3-21.9-6.9c-2.6-4-5.9-7.1-10.7-8c-1.1-0.2-2.3-0.2-3.4,0c-0.6,0.1-1.5,0.6-1.6,1c-0.1,0.6,0.4,1.4,0.8,1.9
+		c0.4,0.5,1,1,1.6,1.3c4.3,2.5,7,6.4,8.8,10.8c3,7.4,8.8,10.7,16.3,11.2c3.5,0.2,7.1-0.2,10.9-0.4c0,0.4,0.1,1,0.1,1.7
+		c0,3.8,0,7.7,0.1,11.5c0,4.2-2.3,5.9-6.2,4.5c-16.7-5.8-30.2-15.9-40-30.6C2.2,98.3,29.2,35.1,85,24.3c42.3-8.2,82.8,18,92.8,59.5
+		c9.4,39-13.5,80.2-51.6,92.7c-3.9,1.3-6.2-0.4-6.2-4.4c0-6.3,0-12.6,0.1-18.9C120.1,147.1,119.4,141.5,115,136.8z" />
+                          <path
+                            d="M72.2,150.2c0.7,0.6,1.2,1.1,1.6,1.5c-0.6,0.4-1.2,1.1-1.8,1.2c-0.4,0.1-1-0.7-1.5-1.1C71,151.3,71.5,150.8,72.2,150.2z" />
+                          <path
+                            d="M59.7,145.5c0.8,1.1,1.4,1.7,1.8,2.5c0,0.1-0.9,0.9-1,0.9c-0.6-0.5-1.3-1-1.7-1.7C58.7,147,59.2,146.4,59.7,145.5z" />
+                          <path
+                            d="M65.9,152.3c-0.7-0.7-1.3-1.2-1.8-1.7c0.4-0.3,1-1.1,1.2-1c0.7,0.3,1.3,0.9,2,1.3C66.9,151.4,66.5,151.7,65.9,152.3z" />
+                          <path
+                            d="M78.3,149.5c0.7,0.6,1.1,1,1.5,1.3c-0.7,0.5-1.3,1.1-2,1.3c-0.3,0.1-0.9-0.6-1.3-1C77.1,150.6,77.6,150.1,78.3,149.5z" />
+                          <path
+                            d="M57.8,143.3c-0.7,0.5-1.2,1-1.3,0.9c-0.6-0.4-1.1-1-1.5-1.6c-0.1-0.1,0.8-1,0.9-1C56.5,142.1,57,142.6,57.8,143.3z" />
+                          <path
+                            d="M54.6,139.1c-0.7,0.4-1.2,0.8-1.4,0.7c-0.5-0.4-0.9-0.9-1.3-1.4c0-0.1,0.6-0.8,0.7-0.8C53.2,138,53.8,138.4,54.6,139.1z" />
+                        </g>
+                      </svg>
+                    </div>
+                  </a>
+                  <!-- <img src="img/github.svg" alt="" style="fill: red;"> -->
+                </li>
+                <li>
+                  <img src="img/linkedin.svg" alt="">
+                </li>
+              </ul>
             </div>
 
             <div class="col-lg-6 animated fadeIn text-center my-auto" id="picDiv">
@@ -98,36 +144,36 @@
 
         <div class="container mt-5 animated fadeInUp" id="work-tiles">
 
-            <div class="row">
-              <div class="col-lg-4">
-                <h3 style="margin: 0px;">UI/UX DESIGN</h3>
-                <h2 style="font-weight: 600">uOttaHack</h2>
-                <p class="mt-2">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
-                  convallis pharetra diam. Vivamus risus diam, eleifend tempor porta nec, porta ac odio.
-                </p>
-              </div>
-
-              <div class="col-lg-5 offset-md-1 rounded shadow tile" id="sesa"></div>
-
+          <div class="row">
+            <div class="col-lg-4">
+              <h3 style="margin: 0px;">UI/UX DESIGN</h3>
+              <h2 style="font-weight: 600">uOttaHack</h2>
+              <p class="mt-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
+                convallis pharetra diam. Vivamus risus diam, eleifend tempor porta nec, porta ac odio.
+              </p>
             </div>
 
-            <div class="row" style="margin-top: 8rem; margin-bottom: 6rem;">
-              <div class="col-lg-4">
-                <h3 style="margin: 0px;">UI/UX DESIGN</h3>
-                <h2 style="font-weight: 600">uOttaHack</h2>
-                <p class="mt-2">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
-                  convallis pharetra diam. Vivamus risus diam, eleifend tempor porta nec, porta ac odio.
-                </p>
-              </div>
+            <div class="col-lg-5 offset-md-1 rounded shadow tile" id="sesa"></div>
 
-              <div class="col-lg-5 offset-md-1 rounded shadow">
-                <p>yoyo</p>
-              </div>
+          </div>
+
+          <div class="row" style="margin-top: 8rem; margin-bottom: 6rem;">
+            <div class="col-lg-4">
+              <h3 style="margin: 0px;">UI/UX DESIGN</h3>
+              <h2 style="font-weight: 600">uOttaHack</h2>
+              <p class="mt-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
+                convallis pharetra diam. Vivamus risus diam, eleifend tempor porta nec, porta ac odio.
+              </p>
             </div>
+
+            <div class="col-lg-5 offset-md-1 rounded shadow">
+              <p>yoyo</p>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -140,7 +186,7 @@
   <script>
     document.getElementById('videosrc').play();
     document.getElementById('pic').play();
-</script>
+  </script>
 
 </body>
 
