--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
+    // Autoplay video
     document.getElementById('videosrc').play();
     document.getElementById('pic').play();
   </script>
