--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row">
 
       <!-- Navigation -->
-      <div class="col-md-2 animated fadeIn" id="mynav">
+      <div class="col-lg-2 animated fadeIn" id="mynav">
         <ul class="text-left">
           <a href="">
             <li>Work</li>
@@ -47,7 +47,7 @@
       </div>
 
       <!-- Main Content -->
-      <div class="col-md-9" id="allcontent">
+      <div class="col-lg-10" id="allcontent">
 
         <div class="container">
           <div class="row">
