remove aos of first work tile

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <!-- Work Showcase -->
         <div class="container mt-5" id="work-tiles">
 
-          <div class="row" data-aos="fade-up" data-aos-delay="800" data-aos-duration="800">
+          <div class="row animated fadeInUp" id="first-work-tile">
             <div class="col-lg-4">
               <h3 style="margin: 0px;">UI/UX DESIGN</h3>
               <h2 style="font-weight: 600">uOttaHack</h2>
