--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
       <!-- Main Content -->
       <div class="col-lg-10" id="allcontent">
 
+        <!-- Name and Video -->
         <div class="container">
           <div class="row">
 
-            <!-- Blurb -->
+            <!-- Name and Blurb -->
             <div class="col-lg-6" id="bio">
               <h1 class="animated fadeIn" id="ImMunir">Hey, I'm Munir</h1>
-              <h2 class="animated fadeIn mt-1 pr-2" id="occupation">Software Engineer & Designer</h2>
+              <h2 class="animated fadeIn pr-2" id="occupation">Software Engineer & Designer</h2>
+              <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2 pr-3" id="blurb">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Phasellus ac vulputate tortor. Aliquam vel pretium eros, ut rutrum leo.
@@ -139,25 +141,27 @@
         <!-- Work Showcase -->
         <div class="container mt-5" id="work-tiles">
 
+          <!-- uOttaHack -->
           <div class="row animated fadeInUp" id="first-work-tile">
             <div class="col-lg-4">
-              <h3 style="margin: 0px;">UI/UX DESIGN</h3>
-              <h2 style="font-weight: 600">uOttaHack</h2>
+              <hr>
+              <h3 class="work-tile-category">UI/UX DESIGN</h3>
+              <h2 class="work-tile-title">uOttaHack</h2>
               <p class="mt-2">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
                 convallis pharetra diam. Vivamus risus diam, eleifend tempor porta nec, porta ac odio.
               </p>
             </div>
-
             <div class="col-lg-5 offset-md-1 mx-auto rounded shadow tile" id="sesa"></div>
-
           </div>
 
+          <!-- Second Work Tile -->
           <div class="row mt-5" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
             <div class="col-lg-4">
-              <h3 style="margin: 0px;">UI/UX DESIGN</h3>
-              <h2 style="font-weight: 600">uOttaHack</h2>
+              <hr>
+              <h3 class="work-tile-category">UI/UX DESIGN</h3>
+              <h2 class="work-tile-title">uOttaHack</h2>
               <p class="mt-2">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Nam dignissim tortor ac ultrices tincidunt. Vivamus turpis diam, feugiat ac congue sit amet,
@@ -167,8 +171,22 @@
 
             <div class="col-lg-5 offset-md-1 mx-auto rounded shadow tile"></div>
           </div>
-
         </div>
+
+        <!-- Footer -->
+        <div class="container mt-3 text-center" data-aos="fade-up" data-aos-duration="600" id="footer">
+          <div class="row">
+            <div class="col-sm-12">
+              <hr>
+              <h2 class="mt-1">Let's Get in Touch!</h2>
+              <a href="">
+                <h2 style="font-size: 20px;" id="email_link">munir.aljaw@gmail.com</h2>
+              </a>
+              <p></p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
