--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <!-- Page Content -->
-  <div class="container" style="max-width: 1400px;">
+  <div class="container" id="allContentContainer">
     <div class="row">
 
       <!-- Navigation -->
@@ -94,7 +94,7 @@
 
                 <!-- Github Button -->
                 <a href="https://github.com/aMoonEar" target="_blank">
-                  <div class="svg-wrapper rounded col-sm-2 ml-3">
+                  <div class="svg-wrapper rounded col-sm-2 ml-3 text-center">
                     <svg version="1.1" class="contact-logo" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
                       style="enable-background:new 0 0 200 200;" xml:space="preserve">
