fix line up issue

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
 
             <!-- Video -->
-            <div class="col-lg-6 animated fadeIn text-center my-auto" id="picDiv">
+            <div class="col-lg-5 offset-lg-1 animated fadeIn my-auto" id="picDiv">
               <video width="400" class="rounded" autoplay defaultMuted muted loop playsinline id="pic">
                 <source src="./img/try2comp.mp4" type="video/mp4" id="videosrc">
                 Your browser does not support HTML5 video.
@@ -152,7 +152,7 @@
                 <b>View article</b>
               </p>
             </div>
-            <div class="col-lg-6 offset-md-1">
+            <div class="col-lg-6 offset-md-2">
               <a href="">
                 <div class="shadow tilePic rounded zoomHover" id="sesa"></div>
               </a>
