--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
               <h2 class="animated fadeIn pr-2" id="occupation">Software Engineer & Designer</h2>
               <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2 pr-3" id="blurb">
-                Ottawa based Software Engineer & Designer that loves make beautiful user experiences. Previously
+                A student based in Ottawa that focuses on engineering beautiful user experiences. Previously
                 interned at Qlik as a Software Engineer and at Health Canada as a Web Developer.
-                I am currently in my 4th year at uOttawa and seeking a Fall 2020 Internship.
+                Currently enrolled in my 4th year at uOttawa and seeking a Fall 2020 Internship.
               </p>
 
               <!-- Contact Buttons -->
@@ -178,71 +178,91 @@
             </div>
           </div>
 
-          <!-- Footer -->
-          <div class="container mt-3 text-left" data-aos="fade-up" data-aos-duration="600" id="footer">
-            <div class="row">
-              <div class="col-sm-12">
-                <hr>
-                <div class="row ml-1 mt-2" id="contact-wrapper">
-                  <!-- LinkedIn button -->
-                  <a href="https://www.linkedin.com/in/munir-aljawahari/" target="_blank">
-                    <div class="svg-wrapper rounded col-sm-2">
-                      <svg version="1.1" class="contact-logo" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
-                        style="enable-background:new 0 0 200 200;" xml:space="preserve">
-                        <g>
-                          <path d="M21.7,40.5c0.7-2.8,1.4-5.6,3.3-8c4.5-5.8,10.7-7.6,17.7-7.2c5.9,0.4,10.9,2.7,14.2,7.9c7.3,11.5-0.2,26-14,26.9
-      c-5,0.3-9.7-0.3-13.9-3.3c-3.8-2.7-6-6.3-6.9-10.8c-0.1-0.3-0.2-0.7-0.3-1C21.7,43.5,21.7,42,21.7,40.5z" />
-                          <path d="M109.8,175.5c-11.4,0-22.5,0-33.6,0c0-33.8,0-67.5,0-101.3c11.2,0,22.3,0,33.6,0c0,4.6,0,9.1,0,13.9
-      c1.9-2.2,3.5-4.3,5.3-6.3c5.1-5.5,11.5-8.6,18.9-9.6c6.8-0.9,13.5-0.5,20,1.8c10,3.4,16.7,10.2,20.8,19.8
-      c3.2,7.6,4.2,15.7,4.3,23.9c0,18.8,0,37.7,0,56.5c0,0.4-0.1,0.9-0.1,1.4c-11.2,0-22.4,0-33.7,0c0-0.7,0-1.3,0-1.9
-      c0-18,0.1-36-0.1-54.1c0-3.6-0.7-7.3-1.8-10.7c-2.4-7.5-8.5-11-16.4-10.5c-8.4,0.5-14.7,7.1-16.4,13.8c-0.6,2.5-0.7,5.2-0.7,7.8
-      c-0.1,17.9,0,35.7,0,53.6C109.8,174.2,109.8,174.8,109.8,175.5z" />
-                          <path
-                            d="M23.8,74.2c11.2,0,22.3,0,33.5,0c0,33.7,0,67.4,0,101.2c-11.1,0-22.2,0-33.5,0C23.8,141.7,23.8,108,23.8,74.2z" />
-                        </g>
-                      </svg>
-                    </div>
-                  </a>
-
-                  <!-- Github Button -->
-                  <a href="https://github.com/aMoonEar" target="_blank">
-                    <div class="svg-wrapper rounded col-sm-2 ml-3">
-                      <svg version="1.1" class="contact-logo" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
-                        style="enable-background:new 0 0 200 200;" xml:space="preserve">
-                        <g>
-                          <path d="M115,136.8c3.8-0.8,7.4-1.4,10.8-2.3c15.2-4.2,23.8-14.7,25-30.5c0.4-4.7,0.5-9.4-0.6-14.1c-1.1-4.6-3.2-8.6-6.2-12.2
-      c-0.8-0.9-1-1.6-0.6-2.8c1.9-6.2,1.3-12.3-1-18.3c-0.2-0.6-1.3-1.2-2-1.2c-3.8-0.1-7.3,1.2-10.7,2.8c-2.9,1.4-5.6,3.1-8.4,4.6
-      c-0.7,0.4-1.7,0.6-2.4,0.4c-12.4-3-24.8-3-37.3,0c-0.8,0.2-1.9,0-2.6-0.5c-5.2-3.2-10.5-6.2-16.7-7.2c-3.7-0.6-4.1-0.4-5.1,3.1
-      c-1.6,5.6-1.8,11.2-0.1,16.8c0.2,0.6-0.1,1.5-0.4,2c-5.9,7-7.9,15.2-7.2,24.2c0.4,5.5,1.3,10.9,3.6,15.9
-      c4.4,9.6,12.3,14.7,22.1,17.3c2.7,0.7,5.6,1.1,8.3,1.6c0.5,0.1,1.1,0.2,1.8,0.4c-2.7,2.9-4,6.1-4.7,9.7c-0.1,0.5-0.7,1-1.2,1.2
-      c-8.9,3.7-16.8,1.3-21.9-6.9c-2.6-4-5.9-7.1-10.7-8c-1.1-0.2-2.3-0.2-3.4,0c-0.6,0.1-1.5,0.6-1.6,1c-0.1,0.6,0.4,1.4,0.8,1.9
-      c0.4,0.5,1,1,1.6,1.3c4.3,2.5,7,6.4,8.8,10.8c3,7.4,8.8,10.7,16.3,11.2c3.5,0.2,7.1-0.2,10.9-0.4c0,0.4,0.1,1,0.1,1.7
-      c0,3.8,0,7.7,0.1,11.5c0,4.2-2.3,5.9-6.2,4.5c-16.7-5.8-30.2-15.9-40-30.6C2.2,98.3,29.2,35.1,85,24.3c42.3-8.2,82.8,18,92.8,59.5
-      c9.4,39-13.5,80.2-51.6,92.7c-3.9,1.3-6.2-0.4-6.2-4.4c0-6.3,0-12.6,0.1-18.9C120.1,147.1,119.4,141.5,115,136.8z" />
-                          <path
-                            d="M72.2,150.2c0.7,0.6,1.2,1.1,1.6,1.5c-0.6,0.4-1.2,1.1-1.8,1.2c-0.4,0.1-1-0.7-1.5-1.1C71,151.3,71.5,150.8,72.2,150.2z" />
-                          <path
-                            d="M59.7,145.5c0.8,1.1,1.4,1.7,1.8,2.5c0,0.1-0.9,0.9-1,0.9c-0.6-0.5-1.3-1-1.7-1.7C58.7,147,59.2,146.4,59.7,145.5z" />
-                          <path
-                            d="M65.9,152.3c-0.7-0.7-1.3-1.2-1.8-1.7c0.4-0.3,1-1.1,1.2-1c0.7,0.3,1.3,0.9,2,1.3C66.9,151.4,66.5,151.7,65.9,152.3z" />
-                          <path
-                            d="M78.3,149.5c0.7,0.6,1.1,1,1.5,1.3c-0.7,0.5-1.3,1.1-2,1.3c-0.3,0.1-0.9-0.6-1.3-1C77.1,150.6,77.6,150.1,78.3,149.5z" />
-                          <path
-                            d="M57.8,143.3c-0.7,0.5-1.2,1-1.3,0.9c-0.6-0.4-1.1-1-1.5-1.6c-0.1-0.1,0.8-1,0.9-1C56.5,142.1,57,142.6,57.8,143.3z" />
-                          <path
-                            d="M54.6,139.1c-0.7,0.4-1.2,0.8-1.4,0.7c-0.5-0.4-0.9-0.9-1.3-1.4c0-0.1,0.6-0.8,0.7-0.8C53.2,138,53.8,138.4,54.6,139.1z" />
-                        </g>
-                      </svg>
-                    </div>
-                  </a>
-                </div>
-                <p class="mt-1">© 2020 Munir Aljawahari's Portfolio</p>
-              </div>
+          <!-- Third Work Tile -->
+          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
+            <div class="col-lg-4 mt-3 tileTitle">
+              <hr>
+              <h3 class="work-tile-category">DESIGN</h3>
+              <h2 class="work-tile-title">uOttaHack 2020</h2>
+              <p class="mt-2">
+                Lead the design for the biggest Hackathon in Ottawa that took place in the University of Ottawa.
+                <br><br>
+                <b>View case study</b>
+              </p>
+            </div>
+            <div class="col-lg-6 offset-md-2">
+              <a href="">
+                <div class="shadow tilePic rounded zoomHover" id="uottahack"></div>
+              </a>
             </div>
           </div>
+        </div>
 
+        <!-- Footer -->
+        <div class="container mt-3 text-left" data-aos="fade-up" data-aos-duration="600" id="footer">
+          <div class="row">
+            <div class="col-sm-12">
+              <hr>
+              <div class="row ml-1 mt-2" id="contact-wrapper">
+                <!-- LinkedIn button -->
+                <a href="https://www.linkedin.com/in/munir-aljawahari/" target="_blank">
+                  <div class="svg-wrapper rounded col-sm-2">
+                    <svg version="1.1" class="contact-logo" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
+                      style="enable-background:new 0 0 200 200;" xml:space="preserve">
+                      <g>
+                        <path d="M21.7,40.5c0.7-2.8,1.4-5.6,3.3-8c4.5-5.8,10.7-7.6,17.7-7.2c5.9,0.4,10.9,2.7,14.2,7.9c7.3,11.5-0.2,26-14,26.9
+              c-5,0.3-9.7-0.3-13.9-3.3c-3.8-2.7-6-6.3-6.9-10.8c-0.1-0.3-0.2-0.7-0.3-1C21.7,43.5,21.7,42,21.7,40.5z" />
+                        <path d="M109.8,175.5c-11.4,0-22.5,0-33.6,0c0-33.8,0-67.5,0-101.3c11.2,0,22.3,0,33.6,0c0,4.6,0,9.1,0,13.9
+              c1.9-2.2,3.5-4.3,5.3-6.3c5.1-5.5,11.5-8.6,18.9-9.6c6.8-0.9,13.5-0.5,20,1.8c10,3.4,16.7,10.2,20.8,19.8
+              c3.2,7.6,4.2,15.7,4.3,23.9c0,18.8,0,37.7,0,56.5c0,0.4-0.1,0.9-0.1,1.4c-11.2,0-22.4,0-33.7,0c0-0.7,0-1.3,0-1.9
+              c0-18,0.1-36-0.1-54.1c0-3.6-0.7-7.3-1.8-10.7c-2.4-7.5-8.5-11-16.4-10.5c-8.4,0.5-14.7,7.1-16.4,13.8c-0.6,2.5-0.7,5.2-0.7,7.8
+              c-0.1,17.9,0,35.7,0,53.6C109.8,174.2,109.8,174.8,109.8,175.5z" />
+                        <path
+                          d="M23.8,74.2c11.2,0,22.3,0,33.5,0c0,33.7,0,67.4,0,101.2c-11.1,0-22.2,0-33.5,0C23.8,141.7,23.8,108,23.8,74.2z" />
+                      </g>
+                    </svg>
+                  </div>
+                </a>
+
+                <!-- Github Button -->
+                <a href="https://github.com/aMoonEar" target="_blank">
+                  <div class="svg-wrapper rounded col-sm-2 ml-3">
+                    <svg version="1.1" class="contact-logo" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200"
+                      style="enable-background:new 0 0 200 200;" xml:space="preserve">
+                      <g>
+                        <path
+                          d="M115,136.8c3.8-0.8,7.4-1.4,10.8-2.3c15.2-4.2,23.8-14.7,25-30.5c0.4-4.7,0.5-9.4-0.6-14.1c-1.1-4.6-3.2-8.6-6.2-12.2
+              c-0.8-0.9-1-1.6-0.6-2.8c1.9-6.2,1.3-12.3-1-18.3c-0.2-0.6-1.3-1.2-2-1.2c-3.8-0.1-7.3,1.2-10.7,2.8c-2.9,1.4-5.6,3.1-8.4,4.6
+              c-0.7,0.4-1.7,0.6-2.4,0.4c-12.4-3-24.8-3-37.3,0c-0.8,0.2-1.9,0-2.6-0.5c-5.2-3.2-10.5-6.2-16.7-7.2c-3.7-0.6-4.1-0.4-5.1,3.1
+              c-1.6,5.6-1.8,11.2-0.1,16.8c0.2,0.6-0.1,1.5-0.4,2c-5.9,7-7.9,15.2-7.2,24.2c0.4,5.5,1.3,10.9,3.6,15.9
+              c4.4,9.6,12.3,14.7,22.1,17.3c2.7,0.7,5.6,1.1,8.3,1.6c0.5,0.1,1.1,0.2,1.8,0.4c-2.7,2.9-4,6.1-4.7,9.7c-0.1,0.5-0.7,1-1.2,1.2
+              c-8.9,3.7-16.8,1.3-21.9-6.9c-2.6-4-5.9-7.1-10.7-8c-1.1-0.2-2.3-0.2-3.4,0c-0.6,0.1-1.5,0.6-1.6,1c-0.1,0.6,0.4,1.4,0.8,1.9
+              c0.4,0.5,1,1,1.6,1.3c4.3,2.5,7,6.4,8.8,10.8c3,7.4,8.8,10.7,16.3,11.2c3.5,0.2,7.1-0.2,10.9-0.4c0,0.4,0.1,1,0.1,1.7
+              c0,3.8,0,7.7,0.1,11.5c0,4.2-2.3,5.9-6.2,4.5c-16.7-5.8-30.2-15.9-40-30.6C2.2,98.3,29.2,35.1,85,24.3c42.3-8.2,82.8,18,92.8,59.5
+              c9.4,39-13.5,80.2-51.6,92.7c-3.9,1.3-6.2-0.4-6.2-4.4c0-6.3,0-12.6,0.1-18.9C120.1,147.1,119.4,141.5,115,136.8z" />
+                        <path
+                          d="M72.2,150.2c0.7,0.6,1.2,1.1,1.6,1.5c-0.6,0.4-1.2,1.1-1.8,1.2c-0.4,0.1-1-0.7-1.5-1.1C71,151.3,71.5,150.8,72.2,150.2z" />
+                        <path
+                          d="M59.7,145.5c0.8,1.1,1.4,1.7,1.8,2.5c0,0.1-0.9,0.9-1,0.9c-0.6-0.5-1.3-1-1.7-1.7C58.7,147,59.2,146.4,59.7,145.5z" />
+                        <path
+                          d="M65.9,152.3c-0.7-0.7-1.3-1.2-1.8-1.7c0.4-0.3,1-1.1,1.2-1c0.7,0.3,1.3,0.9,2,1.3C66.9,151.4,66.5,151.7,65.9,152.3z" />
+                        <path
+                          d="M78.3,149.5c0.7,0.6,1.1,1,1.5,1.3c-0.7,0.5-1.3,1.1-2,1.3c-0.3,0.1-0.9-0.6-1.3-1C77.1,150.6,77.6,150.1,78.3,149.5z" />
+                        <path
+                          d="M57.8,143.3c-0.7,0.5-1.2,1-1.3,0.9c-0.6-0.4-1.1-1-1.5-1.6c-0.1-0.1,0.8-1,0.9-1C56.5,142.1,57,142.6,57.8,143.3z" />
+                        <path
+                          d="M54.6,139.1c-0.7,0.4-1.2,0.8-1.4,0.7c-0.5-0.4-0.9-0.9-1.3-1.4c0-0.1,0.6-0.8,0.7-0.8C53.2,138,53.8,138.4,54.6,139.1z" />
+                      </g>
+                    </svg>
+                  </div>
+                </a>
+              </div>
+              <p class="mt-1">© 2020 Munir Aljawahari's Portfolio</p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </div>
