--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <!-- Custom CSS -->
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/button.css" rel="stylesheet">
 
 </head>
 
@@ -38,13 +39,13 @@
       <div class="col-lg-2 animated fadeIn" id="mynav">
         <ul class="text-left">
           <a href="">
+            <li><em>Home</em></li>
+          </a>
+          <a href="/about.html">
             <li>Work</li>
           </a>
           <a href="/about.html">
-            <li>About Me</li>
-          </a>
-          <a href="">
-            <li>Contact</li>
+            <li>About</li>
           </a>
         </ul>
       </div>
@@ -139,7 +140,7 @@
         <!-- Work Showcase -->
         <div class="container mt-5" id="work-tiles">
 
-          <!-- uOttaHack -->
+          <!-- Qlik -->
           <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about.html';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
@@ -178,24 +179,19 @@
             </div>
           </div>
 
-          <!-- Third Work Tile -->
-          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
-            <div class="col-lg-4 mt-3 tileTitle">
-              <hr>
-              <h3 class="work-tile-category">DESIGN</h3>
-              <h2 class="work-tile-title">uOttaHack 2020</h2>
-              <p class="mt-2">
-                Lead the design for the biggest Hackathon in Ottawa that took place in the University of Ottawa.
-                <br><br>
-                <b>View case study</b>
-              </p>
-            </div>
-            <div class="col-lg-6 offset-md-2">
-              <a href="">
-                <div class="shadow tilePic rounded zoomHover" id="uottahack"></div>
-              </a>
+          <div class="row">
+            <div class="col text-center">
+              <div id="container">
+                <button class="learn-more">
+                  <span class="circle" aria-hidden="true">
+                    <span class="icon arrow"></span>
+                  </span>
+                  <span class="button-text"><h3>Learn More</h3></span>
+                </button>
+              </div>
             </div>
           </div>
+
         </div>
 
         <!-- Footer -->
