Added Shopify pages

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   <span class="circle" aria-hidden="true">
                     <span class="icon arrow"></span>
                   </span>
-                  <span class="button-text"><h3>Learn More</h3></span>
+                  <span class="button-text"><h3>View all work</h3></span>
                 </button>
               </div>
             </div>
