--- a/shopify.html
+++ b/shopify.html
@@ -80,24 +80,26 @@
                                 <b>Secondly</b>, Shopify is the king of adapting and improving. During the entire
                                 pandemic,
                                 Shopify added curbside pickup options for business owners, began to hire more talented
-                                engineers, supported their merchants through #ShopifyReunite, and even extended their
+                                engineers, supported their merchants through <b>#ShopifyReunite</b>, and even extended
+                                their
                                 free trial to Shopify for merchants. Shopify sees every issue as an opportunity to show
                                 the world why they are the best in what they do. In addition to the pandemic, Shopify
                                 improves at an astonishing rate shown by the vast number of features that they
-                                constantly release such as improving POS, releasing Shop & Offset, and much more.
+                                constantly release such as improving POS, releasing <b>Shop</b> & <b>Offset</b>, and
+                                much more.
                                 Working at a place like Shopify would really teach me what it means to see every
                                 obstacle as an opportunity and to never stop improving.
                             </p>
                             <p>
                                 <b>Thirdly</b>, Shopify is just drop dead gorgeous. I don’t ever remember seeing
                                 anything
-                                associated with Shopify look remotely unaesthetic. The website, the store dashboard, the
-                                instagram, the youtube videos are all made with purposeful and meaningful design, and I
+                                associated with Shopify look remotely unaesthetic. The website, the store dashboard,
+                                instagram, youtube videos are all made with purposeful and meaningful design, and I
                                 really appreciate that. Not to mention Shopify Polaris and Shopify UX which immensely
-                                help developers create functional and aesthetic apps for Shopify. Good design builds
-                                trust in customers, and I want to work at a company that exemplifies that in every
-                                aspect. Even sections of the store navigation, like the tax section (which I expected to
-                                look very complicated) were pleasant to the eye.
+                                help developers create functional and aesthetic apps for Shopify.
+                                <b>Good design builds trust in customers</b>, and I want to work at a company that
+                                exemplifies that in every aspect. Even sections of the store navigation, like the tax
+                                section (which I expected to look very complicated) were pleasant to the eye.
                             </p>
                             <figure class="figure col-lg-12 my-5 text-center">
                                 <img src="img/tax.png" class="figure-img img-fluid zoom">
@@ -110,10 +112,10 @@
                                 Shopify will take care of that and create a whole website for you with scratch. If you
                                 are the one of the biggest brands like Kylie Cosmetics or Gymshark, Shopify can handle
                                 and adapt their e-commerce solution for you. Even I, a person with little background in
-                                e-commerce, was able to create my own <a href="https://moonear.myshopify.com/">art
-                                    store</a> in minutes and had a blast
-                                (Password is: ‘moonear’, and yes I plan to dominate the
-                                painting industry with these masterpieces).
+                                e-commerce, was able to create my own
+                                <a href="https://moonear.myshopify.com/">art store</a> in minutes and had a blast
+                                (Password is: ‘moonear’, and yes I plan to dominate the painting industry with these
+                                masterpieces).
                             </p>
                             <figure class="figure col-lg-12 my-5 text-center">
                                 <img src="img/mystore.png" class="figure-img img-fluid zoom">
@@ -122,12 +124,11 @@
                             </figure>
                             <p>
                                 <b>Last, and most importantly</b>, Shopify believes and invests in the future of
-                                society. The
-                                Shopify sustainability fund is an amazing initiative; but I am more impressed more by
-                                the tools that Shopify made to prevent global warming. Tools like Shop Pay where
-                                emissions are tracked and offset, or the offset app that enables merchants to make
-                                shipping emissions more carbon neutral. Shopify is here to stay and is actively looking
-                                to be a part of the clean society the world desperately needs.
+                                society. The Shopify sustainability fund is an amazing initiative; but I am more
+                                impressed more by the tools that Shopify made to prevent global warming. Tools like Shop
+                                Pay where emissions are tracked and offset, or the offset app that enables merchants to
+                                make shipping emissions more carbon neutral. <b>Shopify is here to stay and is actively
+                                looking to be a part of the clean society the world desperately needs</b>.
                             </p>
                             <figure class="figure col-lg-12 my-5 text-center">
                                 <img src="img/shopifyhighlights.png" class="figure-img img-fluid zoom">
@@ -137,7 +138,7 @@
                                 </figcaption>
                             </figure>
                             <p>
-                                What better place could I develop my love for Web Development while simultaneously
+                                What better place could I develop my love for web development while simultaneously
                                 supporting local businesses and the future of society. Shopify is clearly the best at
                                 what they do, and I would love to have a chance to learn from their experiences to
                                 become the best Web Developer I can be.
