--- a/whymunir.html
+++ b/whymunir.html
@@ -65,15 +65,17 @@
                             <p>
                                 My dedication to Web Development began in high school with simple HTML/CSS through
                                 codecademy. Soon enough, I was mastering Bootstrap and Javascript which allowed me to
-                                today create munir.xyz, my personal portfolio website. This confidence led me to
-                                participate in hackathons such as CANDEV Government of Canada hackathon (which I won
-                                WOO) and helped me get my first internship at Health Canada. Although there weren’t many
-                                software developers at Health Canada, I still learned as much as I could and implemented
-                                new software into their practices. I ended up using my expertise to recreate an old PDF
-                                form into an interactive webpage, and created a fully custom Drupal website to aid
-                                project management, both of which were huge successes! Employees at Shopify always look
-                                for ways to make an impact, and I wanted to make as big of an impact as I could within
-                                my internship, which helped me secure a part-time role with them during school.
+                                today create <a href="index.html">munir.xyz</a>, my personal portfolio website. This
+                                confidence led me to participate in hackathons such as CANDEV Government of Canada
+                                hackathon (which I won WOO!) and helped me get my first internship at Health Canada.
+                                <br><br>
+                                Although there weren’t many software developers at Health Canada, I still learned as
+                                much as I could and implemented new software into their practices. I ended up using my
+                                expertise to recreate an old PDF form into an interactive webpage, and created a fully
+                                custom Drupal website to aid project management, both of which were huge successes!
+                                <b>Employees at Shopify always look for ways to make an impact</b>, and I wanted to make as big
+                                of an impact as I could within my internship, which helped me secure a part-time role
+                                with them during school.
                             </p>
                             <figure class="figure col-lg-12 my-5 text-center">
                                 <img src="img/healthform.png" class="figure-img img-fluid zoom">
@@ -94,7 +96,9 @@
                                 rest is my positive attitude and collaboration skills. At Qlik, I had a good
                                 relationship with other developers because I kept a positive attitude towards learning,
                                 never hesitated to ask questions, and always sought bigger opportunities to prove
-                                myself. This led me to become a scrum master as an intern, where I became responsible
+                                myself. 
+                                <br><br>
+                                This led me to become a scrum master as an intern, where I became responsible
                                 for running every agile meeting building a positive atmosphere. Not to mention, I had to
                                 make quick decisions based on the needs of my manager (such as expecting us to stop all
                                 of our exciting feature work to barrage the endless stack of bugs). To be a scrum
