--- a/coverletter.html
+++ b/coverletter.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166232623-1');
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -63,13 +75,13 @@
                             </p>
                             <p>
                                 Although resumes can tell you a lot about an individual, they never tell you the journey
-                                that led the person to where they are today. My name is Munir Aljawahari. I am a student
-                                at the University of Ottawa, and I love using Web Development and my creativity to craft
-                                elegant user experiences.
+                                that led the person to where they are today. <b>My name is Munir Aljawahari</b>. I am a
+                                student at the University of Ottawa, and I love using Web Development and my creativity
+                                to craft elegant user experiences.
                             </p>
                             <p>
                                 My engineering journey started in high school by simply Googling how to make mobile
-                                games which sparked me to make DodgeBox, an android mobile game that is currently
+                                games which sparked me ship make DodgeBox, an android mobile game that is currently
                                 published on the Play Store! The app may not have hit global charts, but it taught me so
                                 much about research, planning, designing, and crafting; traits that are valued at a
                                 place like Shopify.
