--- a/shopify.html
+++ b/shopify.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166232623-1');
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -128,7 +140,7 @@
                                 impressed more by the tools that Shopify made to prevent global warming. Tools like Shop
                                 Pay where emissions are tracked and offset, or the offset app that enables merchants to
                                 make shipping emissions more carbon neutral. <b>Shopify is here to stay and is actively
-                                looking to be a part of the clean society the world desperately needs</b>.
+                                    looking to be a part of the clean society the world desperately needs</b>.
                             </p>
                             <figure class="figure col-lg-12 my-5 text-center">
                                 <img src="img/shopifyhighlights.png" class="figure-img img-fluid zoom">
