--- a/whymunir.html
+++ b/whymunir.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166232623-1');
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -73,7 +85,8 @@
                                 much as I could and implemented new software into their practices. I ended up using my
                                 expertise to recreate an old PDF form into an interactive webpage, and created a fully
                                 custom Drupal website to aid project management, both of which were huge successes!
-                                <b>Employees at Shopify always look for ways to make an impact</b>, and I wanted to make as big
+                                <b>Employees at Shopify always look for ways to make an impact</b>, and I wanted to make
+                                as big
                                 of an impact as I could within my internship, which helped me secure a part-time role
                                 with them during school.
                             </p>
@@ -96,7 +109,7 @@
                                 rest is my positive attitude and collaboration skills. At Qlik, I had a good
                                 relationship with other developers because I kept a positive attitude towards learning,
                                 never hesitated to ask questions, and always sought bigger opportunities to prove
-                                myself. 
+                                myself.
                                 <br><br>
                                 This led me to become a scrum master as an intern, where I became responsible
                                 for running every agile meeting building a positive atmosphere. Not to mention, I had to
