--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="/about.html">
             <li>Work</li>
           </a>
-          <a href="/about.html">
+          <a href="/about">
             <li>About</li>
           </a>
         </ul>
